

#get source in sub module directories
SUB_MODULE_SOURCE_DIRECTORY_LIST(SUB_SRC_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})

#MESSAGE(STATUS "build library SUB_SRC_DIRECTORIES:[${SUB_SRC_DIRECTORIES}]")

FOREACH(SUB_SRC_DIRECTORY ${SUB_SRC_DIRECTORIES})
  #MESSAGE(STATUS "into directory:[${SUB_SRC_DIRECTORY}]")
  ADD_SUBDIRECTORY(${SUB_SRC_DIRECTORY})
ENDFOREACH()

