
#设置模块的名称，如果代码中没有指定模块名时，将使用该模块名
SET(CSF_MODULE_PROJECT_NAME "test_vm")
SET(CSF_MODULE_TARGET_NAME ${CSF_MODULE_PROJECT_NAME})

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ")

#表示可执行文件的输出目录
SET(EXECUTABLE_OUTPUT_PATH ${CSF_PROJECT_OUTPUT_TOP_DIR}/${CSF_MODULE_PROJECT_NAME})

#表示当前描述版本信息的代码文件
SET(CSF_MODULE_VERSION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/wait.cpp)

#grep "\"V" include/modules/connect/csf_ip_connect/csf_ip_connect_factory.hpp -m 1 | awk '{print $3}' | awk -F "\"" '{print $2}' | awk -F "V" '{print $2}'
#从代码中获取版本号信息
EXECUTE_PROCESS(
    COMMAND grep "\"V" ${CSF_MODULE_VERSION_FILE} -m 1
    COMMAND awk "{print $3}"
    COMMAND awk -F "\"" "{print $2}"
    COMMAND awk -F "V" "{print $2}"
    OUTPUT_VARIABLE CSF_MODULE_LIBRARY_VERSION
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

#从代码中获取模块名称
EXECUTE_PROCESS(
    COMMAND grep "VAR" ${CSF_MODULE_VERSION_FILE} -m 1
    COMMAND awk "{print $3}"
	COMMAND awk -F "\"" "{print $2}"
    OUTPUT_VARIABLE CSF_MODULE_TARGET_NAME
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

IF(NOT CSF_MODULE_TARGET_NAME )
    SET(CSF_MODULE_TARGET_NAME ${CSF_MODULE_PROJECT_NAME})
ENDIF()

IF( CSF_MODULE_LIBRARY_VERSION )
    SET(CSF_MODULE_LIBRARY_SHARED_NAME lib${CSF_MODULE_TARGET_NAME}-${CSF_MODULE_LIBRARY_VERSION}.so)
ELSE()
    SET(CSF_MODULE_LIBRARY_VERSION "1.0.0")
    MESSAGE(FATAL_ERROR "[ CSF_MODULE_LIBRARY_VERSION ] is null error!")
ENDIF()

#MESSAGE(STATUS "CSF_MODULE_LIBRARY_VERSION = [ ${CSF_MODULE_LIBRARY_VERSION} ]")
#MESSAGE(STATUS "CSF_MODULE_LIBRARY_SHARED_NAME = [ ${CSF_MODULE_LIBRARY_SHARED_NAME} ]")

#add src source
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} CSF_SRC_FILES_LIST)

#get source in all sub directories
ALL_SOURCE_DIRECTORY_LIST(SUB_SRC_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(SUB_SRC_DIRECTORY ${SUB_SRC_DIRECTORIES})
  ADD_SUBDIRECTORY(${SUB_SRC_DIRECTORY})
ENDFOREACH()

#添加目录监控所需要的dir_monitor-1.0.0地址
INCLUDE_DIRECTORIES(${CSF_PROJECT_SOURCE_DIR}/third-party/src/dir_monitor-1.0.0/include)

#ìí?óboostoê￡??a??error: ??current_exception?ˉ is not a member of ??std?ˉ?êìa
ADD_DEFINITIONS(-DBOOST_ASIO_DISABLE_STD_FUTURE -DBOOST_SYSTEM_ENABLE_DEPRECATED)

#add module app
ADD_EXECUTABLE(${CSF_MODULE_TARGET_NAME} ${CSF_SRC_FILES_LIST})
   
ADD_DEPENDENCIES(${CSF_MODULE_TARGET_NAME}
	${CSF_PROJECT_LIBRARY_STATIC_NAME}
	${CSF_GLOBAL_PROJECT_LIBRARY_STATIC_NAME}
	)

TARGET_LINK_LIBRARIES(${CSF_MODULE_TARGET_NAME}
   ${CSF_PROJECT_LIBRARY_STATIC_NAME}
	${CSF_GLOBAL_PROJECT_LIBRARY_STATIC_NAME}
	${BOOST_LIBRARIES}
   )

MESSAGE(STATUS " ")
MESSAGE(STATUS "--------------------------------------------------------------")
MESSAGE(STATUS "build [ app ] project[ ${CSF_MODULE_TARGET_NAME} ]")
MESSAGE(STATUS "build [ app ] version[ ${CSF_MODULE_TARGET_NAME}-v${CSF_MODULE_LIBRARY_VERSION} ]")
MESSAGE(STATUS "build executable:[ ${CSF_MODULE_TARGET_NAME} ]")
MESSAGE(STATUS "--------------------------------------------------------------")
